# H3templatesWebsiteDjango

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: code-quality-and-dependencies-checks.yml
H3templatesWebsiteDjango/: asgi.py  settings.py  urls.py  wsgi.py
builtin_templates/: admin.py  apps.py  models.py  urls.py  views.py
builtin_templates/migrations/: 0001_initial.py
core/: models.py  tests.py  views.py
core/migrations/: 0001_initial.py
core/templates/components/: table_of_contents.html  template_entry.html
core/templates/core/: base.html  index.html  panel.html  template_page.html
core/templatetags/: core_extras.py
original_templates/: admin.py  apps.py  models.py  views.py
original_templates/migrations/: 0001_initial.py
static/: tailwind_config.js
