[tool.poetry]
name = "h3templateswebsitedjango"
version = "0.1.0"
description = ""
authors = ["Kubaryt <kubastarzyk6554@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
ruff = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
