[tool.poetry]
name = "h3templateswebsitedjango"
version = "0.1.0"
description = ""
authors = ["Kubaryt <kubastarzyk6554@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
ruff = "^0.4.2"
fontawesomefree = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
